--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,158 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    margin: 0;
+    font-family: 'Kodchasan';
+    background: linear-gradient(to bottom, #5995c5, #121212);
+    background-attachment: fixed; /* Фіксує градієнт, щоб він не повторювався */
+    background-size: 100% 100vh; /* Розтягує градієнт на всю сторінку */
+    height: 100vh;
+    color: #ffffff;
+}
+
+
+.dashboard {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #1c1c1c;
+}
+
+.logo {
+    font-size: 34px;
+    font-weight: 700;
+    color: #38a9f0;
+    margin-left: 15px;
+}
+
+.search-bar input {
+    width: 500px;
+    padding-left: 30px;
+    border-radius: 31px;
+    border: none;
+    color: #999999;
+    background: #222627;
+}
+
+.user-profile {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.profile-circle {
+    width: 40px;
+    height: 40px;
+    background-color: #38a9f0;
+    border-radius: 50%;
+}
+
+.username {
+    font-size: 20px;
+    text-align: right;
+}
+
+.role {
+    font-size: 12px;
+    color: #999999;
+    display: flex;
+}
+
+.content {
+    display: flex;
+    flex: 1;
+}
+
+.sidebar {
+    width: 20%;
+    padding: 20px;
+    background: linear-gradient(to bottom, #2a2a2a, #1c1c1c);
+    margin-left: 80px;
+    margin-bottom: auto;
+    margin-top: 100px;
+    height: 2000px;
+    overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: #38a9f0 #1c1c1c;
+}
+
+/* Для Chrome, Edge */
+.sidebar::-webkit-scrollbar {
+    width: 8px;
+}
+
+.sidebar::-webkit-scrollbar-thumb {
+    background-color: #38a9f0;
+    border-radius: 4px;
+}
+
+.sidebar::-webkit-scrollbar-track {
+    background: #1c1c1c;
+}
+
+.tag {
+    margin-bottom: 20px;
+}
+
+.subtags {
+    margin-left: 10px;
+    color: #888888;
+}
+
+.main {
+    flex: 10;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-top: 100px;
+}
+
+/* Додаємо стилі для галереї */
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    padding-top: 20px;
+    padding-bottom: 50px;
+    padding-left: 50px;
+    justify-content: space-between;
+    width: 100%;
+    background-color: #1c1c1c;
+    border-radius: 12px;
+}
+
+
+.gallery-item {
+    width: calc(20% - 10px);
+    box-sizing: border-box;
+    height: 220px;
+    margin-top: 30px;
+}
+
+.gallery-image {
+    width: 100%; /* Заповнюємо контейнер картинкою */
+    height: 220px;
+    width: 220px;
+}
+
+.profile-circle {
+    width: 40px;
+    height: 40px;
+    overflow: hidden;
+    border-radius: 50%;
+    background-color: #38a9f0;
+}
+
+.profile-circle img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
