--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -414,8 +414,6 @@ body {
     padding: 20px;
     background-color: #1c1c1c;
     border-radius: 12px;
-    border: 1px solid #38a9f0;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
     user-select: none;
 }
 
@@ -729,4 +727,94 @@ body {
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
     min-width: 160px;
     z-index: 1000;
+}
+
+.admin-info{
+    font-size: 24px;
+}
+
+.admin-subinfo{
+    color: #777;
+}
+
+.admin-user{
+    background: #718096;
+    border-radius: 12px;
+    padding: 15px;
+}
+
+.admin-artworks{
+    background: #a2faa2;
+    border-radius: 12px;
+    padding: 15px;
+}
+
+.admin-tags{
+    background: #bcb381;
+    border-radius: 12px;
+    padding: 15px;
+}
+
+.admin-h1{
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.admin-p{
+    color: #222;
+}
+
+.admin-label {
+    font-size: 14px;
+    color: #2d3748;
+    margin-bottom: 8px;
+}
+
+.admin-input {
+    padding: 8px;
+    border-radius: 6px;
+    color: #999999;
+    background: #222627;
+    width: 100%;
+    margin-bottom: 12px;
+}
+
+.admin-button {
+    background-color: #3182ce;
+    color: #fff;
+    padding: 10px 15px;
+    border-radius: 6px;
+    border: none;
+    cursor: pointer;
+}
+
+.admin-button:hover {
+    background-color: #2b6cb0;
+}
+
+.admin-content {
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.admin-main {
+    display: flex;
+    flex-wrap: wrap;
+    padding-top: 20px;
+    padding-bottom: 50px;
+    padding-left: 20px;
+    justify-content: space-between;
+    width: 100%;
+    background-color: #1c1c1c;
+    border-radius: 12px;
+}
+
+.profile-container{
+    width: 1300px;
+    height: 820px;
+    margin: auto;
+    padding: 20px;
+    background-color: #1c1c1c;
+    border-radius: 12px;
+    user-select: none;
 }
